adding missing lib.hpp

--- a/TODO
+++ b/TODO
@@ -32,6 +32,7 @@
   - Yano, Bouniol 2010: "A minimum bulk microphysics" ?
   - Seifert & Beheng 2001: "A double-moment parameterization for simulating autoconversion, accretion and selfcollection"
   - TAU Cloud Microphysical Code: Method of Moments (http://www.esrl.noaa.gov/csd/staff/graham.feingold/code/)
+  - Tao et al. 2003 - 1-moment bulk micro
 
 
 
