--- a/TODO
+++ b/TODO
@@ -10,6 +10,10 @@
 - accumulated rainfall plots (and output)
 - Kessler: ac_thres as option
 - sdm: MAC/HAC, vent_coef as options
+- cond/evap separation for other micro than blk_1m?
+- missing in SDM: n1==n2, STP, rcyc
+- STP in blk_2m
+- rho_w i rho_stp do earth.hpp
 
 
 0.1 (pre-submission / during reviews, should-be-easy enhancements or code cleanups before first release):
