--- a/TODO
+++ b/TODO
@@ -1,22 +1,23 @@
 0.09 (pre-submission, things that need to be explicitely mentioned in the text):
-- czy thrust::get(tuple) nie moga zwracac referencji? (o ile nie ma jednostek to by sie przydalo
 - kappe dla imcw8::case1 ustalic
-- tolerances for bisect in kappa and max-mason (+something better than bisect?)
-- auto cond_dt choice for blk_2m & lgrngn
-- 0-d parcel/box framework (could make the drops model obsolete in a longer run!)
-- ventilation as an option in all schemes
-- think of some sexy animation showing some aerosol-indirect-effect-related stuff
+- SDM: n1==n2
+- SDM: multiple collisions
+- rcyc
 - sdm: coalescence Kernel choice: constant, Long, B\"ohm
+- 0-d parcel/box framework (could make the drops model obsolete in a longer run!)
 - accumulated rainfall plots (and output)
-- Kessler: ac_thres as option
-- cond/evap separation for other micro than blk_1m?
-- missing in SDM: n1==n2, STP, rcyc
-- STP in blk_2m
-- rho_w i rho_stp do earth.hpp
 
 
 0.1 (pre-submission / during reviews, should-be-easy enhancements or code cleanups before first release):
+- think of some sexy animation showing some aerosol-indirect-effect-related stuff
+- ventilation as an option in all schemes
+- Kessler: ac_thres as option
+- cond/evap separation for other micro than blk_1m?
+- rho_w do earth.hpp?
 - cleanup file extensions for lgrngn (.ipp, .tpp, ...)
+- czy thrust::get(tuple) nie moga zwracac referencji? (o ile nie ma jednostek to by sie przydalo
+- tolerances for bisect in kappa and max-mason (+something better than bisect?)
+- auto cond_dt choice for blk_2m & lgrngn
 
 0.2: (near future enhancements, things important for the initial stages of the HARMONIA project)
 - super-droplet initialisation: uniform in volume -> uniform in mass of air
