--- a/TODO
+++ b/TODO
@@ -20,6 +20,7 @@
 - auto cond_dt choice for blk_2m & lgrngn
 
 0.2: (near future enhancements, things important for the initial stages of the HARMONIA project)
+- make the upstream logic in blk_1m in blk_2m common!
 - super-droplet initialisation: uniform in volume -> uniform in mass of air
 - initialisation with multiple dry pdfs (with multiple kappas)
 - sat. vap. pressure approximation as a template class for thermodynamics-related classes (e.g. Flatau's polynomial approximations vs. const-cp analytical formulas) 
