--- a/TODO
+++ b/TODO
@@ -1,25 +1,22 @@
 0.09 (pre-submission, things that need to be explicitely mentioned in the text):
-- kappe dla imcw8::case1 ustalic
-- SDM: n1==n2
-- SDM: multiple collisions
-- rcyc
 - sdm: coalescence Kernel choice: constant, Long, B\"ohm
-- 0-d parcel/box framework (could make the drops model obsolete in a longer run!)
-- accumulated rainfall plots (and output)
-
 
 0.1 (pre-submission / during reviews, should-be-easy enhancements or code cleanups before first release):
-- think of some sexy animation showing some aerosol-indirect-effect-related stuff
-- ventilation as an option in all schemes
-- Kessler: ac_thres as option
-- cond/evap separation for other micro than blk_1m?
+- SDM: n1==n2
 - rho_w do earth.hpp?
 - cleanup file extensions for lgrngn (.ipp, .tpp, ...)
 - czy thrust::get(tuple) nie moga zwracac referencji? (o ile nie ma jednostek to by sie przydalo
 - tolerances for bisect in kappa and max-mason (+something better than bisect?)
-- auto cond_dt choice for blk_2m & lgrngn
 
 0.2: (near future enhancements, things important for the initial stages of the HARMONIA project)
+- cond/evap separation for other micro than blk_1m?
+- think of some sexy animation showing some aerosol-indirect-effect-related stuff
+- rcyc
+- accumulated rainfall plots (and output)
+- 0-d parcel/box framework (could make the drops model obsolete in a longer run!)
+- adaptive timestep for coal
+- adaptive timestep for cond
+- auto cond_dt choice for blk_2m?
 - make the upstream logic in blk_1m in blk_2m common!
 - super-droplet initialisation: uniform in volume -> uniform in mass of air
 - initialisation with multiple dry pdfs (with multiple kappas)
