--- a/README
+++ b/README
@@ -1,16 +1,11 @@
 libcloudph++ - a cloud (micro)physics library
 
-First, that's all work in progress!
-
+Quick install guide:
 
 ...libcloudphxx$ mkdir build
 ...libcloudphxx$ cd build
-...libcloudphxx/build$ cmake    \
-  -DCMAKE_BUILD_TYPE=Release    \
-  -DCMAKE_CXX_COMPILER=clang++  \
-  -DCMAKE_INSTALL_PREFIX=/usr   \
-  ..
+...libcloudphxx/build$ cmake .. -DCMAKE_CXX_COMPILER=clang++  
+...libcloudphxx/build$ cmake .. -DCMAKE_BUILD_TYPE=Release  -DCMAKE_INSTALL_PREFIX=/usr 
 ...libcloudphxx/build$ make 
 ...libcloudphxx/build$ make test
 ...libcloudphxx/build$ sudo make install
-
