--- a/TODO
+++ b/TODO
@@ -1,45 +1,39 @@
-0.1 (pre-submission / during reviews, should-be-easy enhancements or code cleanups before first release):
-- an assert/run-time error when no spectra in blk_2m / lgrngn
-- how to make Python assert->exception translation work in src?
-- C++11 constructs in lgrngn after with new CUDA!
-- what with the invalid flag??? should chemistry/etc be done only on valid droplets???
-- Thouron et al. supersaturation?
-- bitwise reproducibility - double check + mention in the paper
-- sdm: coalescence Kernel choice: constant, Long, B\"ohm
-- unifikacja predkosci opadania lgrngn vs. blk_2m ?
-- rho_w do earth.hpp?
-- cleanup file extensions for lgrngn (.ipp, .tpp, ...)
-- czy thrust::get(tuple) nie moga zwracac referencji? (o ile nie ma jednostek to by sie przydalo
-- tolerances for bisect in kappa and max-mason (+something better than bisect?)
-- do CUDA asserts go away with NDEBUG?
+1.0:
+  - rephrase and summarise blk_2m TODOs (for 2.0)
+  - standarise throws to std::runtime_error
+  - one single throw for 1D 
+  - cleanup Doxygen leftovers
+  - testy na Gentoo, Fedora
+  - Release mode as default
+  - remove 1D TODOs (incl Pyton and tests) + document that 0D, 2D and 3D supported
+  - plik README
+  - plik CREDITS
+  - opts_init process flags + skip inits
+  - wyjaśnić dlaczego koalscencja nie działa
+  - zigzag w drops.py
+  - dołek
+  - PY3 compatibility (Maciek)
+  - separate CMake hierarchies
+  - find-libclouphxx.cmake
+  - cleanup .travis.yml (make-j, OMP_NUM_THREADS)
+  - h5diff tests for icicle
+  - consider changing asserts into throws (incl. an assert/run-time error when no spectra in blk_2m / lgrngn)
+  - check if boost root-finding works on CUDA!  (to get rid of tolerances for bisect in kappa and max-mason (+something better than bisect?)
+  - accumulated rainfall logic + plots (and output) + support in Python
+  - blk_2m vs. iga!
 
-0.2: (near future enhancements, things important for the initial stages of the HARMONIA project)
-- cond/evap separation for other micro than blk_1m?
-- think of some sexy animation showing some aerosol-indirect-effect-related stuff
-- accumulated rainfall plots (and output)
-- adaptive timestep for coal
-- adaptive timestep for cond
-- auto cond_dt choice for blk_2m?
-- make the upstream logic in blk_1m in blk_2m common!
-- initialisation with multiple dry pdfs (with multiple kappas)
-- sat. vap. pressure approximation as a template class for thermodynamics-related classes (e.g. Flatau's polynomial approximations vs. const-cp analytical formulas) 
-- non-kappa Koehler curves?
-  - insoluble core: http://www.atmos-chem-phys.org/8/1985/2008/acp-8-1985-2008.pdf
-  - surface active organic aerosol: http://www.atmos-chem-phys.net/11/4073/2011/acp-11-4073-2011.pdf
-- optionally include radiative effects on drop growth?  see below:
-  - Bott et al. 1990: ... diffusional growth of the particles is calculated by considering radiative effects in the droplet growth equation. Numerical results elucidate that the strong interaction between the radiatively induced droplet growth and their gravitational settling is responsible for a distinct reduction of the liquid water content ...
-  - Austin et al. 1995: ... Radiative cooling near the top of a layer cloud plays a dominant role in droplet condensation growth. ...
-  - Harrington et al. 2000: ... production of drizzle-sized drops is strongly dependent upon parcel cloud-top residence time for both radiative- and nonradiative-influenced growth. Drizzle-sized drops can be produced between 20 and 50 min earlier through the inclusion of the radiative term, which corroborates earlier results...
-  - Marquis et al. 2005: ... shortwave (SW) heating of individual drops can be strong enough that drop temperatures at equilibrium deviate by as much as 6°C from the surrounding environment ...
-- a simple test with libradtran for schemes with diagnosable r_eff
-
-
-0.3: (not-so-near future enhancements, applicable to HARMONIA)
-- a Barbados set-up aimed at the Hoppel gap! (CARRIBA?, http://www.mpimet.mpg.de/en/science/the-atmosphere-in-the-earth-system/initiatives/barbadosstation/barbados-workshop-oct-2011.html , aerosol composition: aerosol composition mentioned on Heike's slides: http://www.mpimet.mpg.de/fileadmin/atmosphaere/barbados/Workshop/Barbados_Workshop_10_2011_Wex.pdf)
-- sdm: aerosol sources
-- other microphysics schemes?
-  - Morrison et al. 2005; Morrison & Grabowski 2007, 2008: two-moment
-  - Yano, Bouniol 2010: "A minimum bulk microphysics" ?
-  - Seifert & Beheng 2001: "A double-moment parameterization for simulating autoconversion, accretion and selfcollection"
-  - TAU Cloud Microphysical Code: Method of Moments (http://www.esrl.noaa.gov/csd/staff/graham.feingold/code/)
-  - Tao et al. 2003 - 1-moment bulk micro
+2.0:
+  - ventilation as an option
+  - handle multiple kappas
+  - C++11 constructs in lgrngn after with new CUDA!
+  - Thouron et al. supersaturation?
+  - what with the invalid flag??? should chemistry/etc be done only on valid droplets???
+  - how to make Python assert->exception translation work in src?
+  - unifikacja predkosci opadania lgrngn vs. blk_2m ?
+  - rho_w do earth.hpp?
+  - cleanup file extensions for lgrngn (.ipp, .tpp, ...)
+  - do CUDA asserts go away with NDEBUG?
+  - czy thrust::get(tuple) nie moga zwracac referencji? (o ile nie ma jednostek to by sie przydalo
+  - cond/evap separation for other micro than blk_1m?
+  - make the upstream logic in blk_1m in blk_2m common!
+  - initialisation with multiple dry pdfs (with multiple kappas)
